# Neb

./: README.md
compiler/: run.sh  target.neb
compiler/java/: MonteCarlo.h  NebStreamCpuCode.c  NebStreamKernel.maxj  NebStreamManager.maxj  Template.cl
compiler/java/src/com/neb/: Main.java  Neb.g4
compiler/java/src/com/neb/ad/: ADFactory.java  ADFunctionVisitor.java  ADProgram.java  ADProgramVisitor.java
compiler/java/src/com/neb/common/: CUtils.java  CodeGenVisitor.java  FunctionVisitor.java  ProgramFactory.java  RandomSet.java  StringRandomSource.java  StringVariable.java  Target.java  TreeFactory.java  TreeProgram.java  Type.java  TypeVisitor.java  VariableTable.java
compiler/java/src/com/neb/common/codes/: ICode.java  (+7 more)
compiler/java/src/com/neb/cpp/: CPPFactory.java  CPPFunctionVisitor.java  CPPProgram.java  CPPProgramVisitor.java
compiler/java/src/com/neb/cppML/: CPPMLFactory.java  CPPMLFunctionVisitor.java  CPPMLPayoffVisitor.java  CPPMLProgram.java  CPPMLProgramVisitor.java
compiler/java/src/com/neb/maxeler/: MaxelerFactory.java  MaxelerFunctionVisitor.java  MaxelerProgram.java  MaxelerProgramVisitor.java
compiler/java/src/com/neb/openCL/: OpenCLFactory.java  OpenCLFunctionVisitor.java  OpenCLProgram.java  OpenCLProgramVisitor.java
compiler/models/: blackScholes.neb  blackScholesAD.neb  heston.neb  neuron.neb  randomWalk.neb
compiler/skeletons/ad/: Makefile  MonteCarlo.cpp
compiler/skeletons/control/: CMakeCache.txt  CMakeLists.txt  DefaultController.cpp  DefaultController.h  Main.cpp  Makefile  NebController.cpp  NebController.h  Simulation.cpp  Simulation.h  Utils.cpp  Utils.h  a.out
compiler/skeletons/control/Accelerators/: NebAccelerator.cpp  NebAccelerator.h
compiler/skeletons/control/Accelerators/cpp/: CppAccelerator.cpp  CppAccelerator.h  CppGenerated.h
compiler/skeletons/control/Accelerators/openCL/: OpenCLAccelerator.cpp  OpenCLAccelerator.h  OpenCLGenerated.cpp  OpenCLGenerated.h  Template.cl
compiler/skeletons/cpp/: MonteCarlo.cpp  utils.cpp
compiler/skeletons/cpp_mlmc/: CMakeLists.txt  Makefile  a.out  generated.h  levelEstimator.cpp  levelEstimator.h  levelEstimator.h.gch  main.cpp  mlmc.cpp  mlmc.h  regression.cpp  regression.h
compiler/skeletons/cpp_mp/: Makefile  MonteCarlo.cpp  utils.h
compiler/skeletons/fpga/: .maxproject
compiler/skeletons/fpga/CPUCode/: .cproject  .project  Makefile  Makefile.files.include  NebStreamCpuCode.cpp
compiler/skeletons/fpga/EngineCode/: .project
compiler/skeletons/fpga/EngineCode/src/nebstream/: NebStreamKernel.maxj  NebStreamManager.maxj
compiler/skeletons/fpga/RunRules/: .project
compiler/skeletons/fpga/RunRules/DFE/: Makefile.include  NebStream.xml  NebStream_Build.xml  RunRules.settings
compiler/skeletons/fpga/RunRules/Simulation/: Makefile.include  NebStream.xml  NebStream_Build.xml  RunRules.settings
compiler/skeletons/fpga_mlmc/: .maxproject  CMakeLists.txt
compiler/skeletons/fpga_mlmc/CPUCode/: .cproject  .project  Makefile  Makefile.files.include  NebMLMCStreamCpuCode.cpp  generated.h  levelEstimator.cpp  main.cpp
compiler/skeletons/fpga_mlmc/EngineCode/: .project
compiler/skeletons/fpga_mlmc/EngineCode/src/nebmlmcstream/: NebMLMCStreamEngineParameters.maxj  NebMLMCStreamKernel.maxj
compiler/skeletons/fpga_mlmc/RunRules/: .project
compiler/skeletons/fpga_mlmc/RunRules/DFE/: Makefile.include  NebMLMCStream.xml  NebMLMCStream_Build.xml  RunRules.settings
compiler/skeletons/fpga_mlmc/RunRules/DFE/include/: Maxfiles.h  NebMLMCStream.h
compiler/skeletons/fpga_mlmc/RunRules/Simulation/: Makefile.include  NebMLMCStream.xml  NebMLMCStream_Build.xml  RunRules.settings
compiler/skeletons/fpga_mlmc/RunRules/Simulation/include/: NebMLMCStream.h
compiler/skeletons/fpga_mlmc/RunRules/Simulation/maxfiles/: .checksum
compiler/skeletons/fpga_mlmc/RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/: _init.conf
compiler/skeletons/fpga_mlmc/RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/results/: NebMLMCStream.h  NebMLMCStream.max  NebMLMCStream.xml  NebMLMCStreamKernel_Configuration.txt  NebMLMCStreamKernel_NodeDiary.txt  NebMLMCStream_NebMLMCStreamKernel_final-simulation.pxg  NebMLMCStream_NebMLMCStreamKernel_original.pxg
compiler/skeletons/fpga_mlmc/RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/: Manager_NebMLMCStream.graphs  Manager_NebMLMCStream_Final.mxg  Manager_NebMLMCStream_Original.mxg  Manager_NebMLMCStream_clockwidth.dot  Manager_NebMLMCStream_dualaspect.dot  Manager_NebMLMCStream_final.dot  Manager_NebMLMCStream_pullpush.dot  Manager_NebMLMCStream_schedstall.dot  NebMLMCStream.xml  NebMLMCStreamKernel.graphs  NebMLMCStreamKernel_FIFOReport.txt  NebMLMCStreamKernel_IODistances.h  NebMLMCStreamKernel_NodeDiary.txt  NebMLMCStreamKernel_constants_report.txt  NebMLMCStreamKernel_final.dot  NebMLMCStreamKernel_graph_warnings.txt  NebMLMCStreamKernel_illegalLoop.dot  NebMLMCStreamKernel_optimised.dot  NebMLMCStreamKernel_original.dot  NebMLMCStreamKernel_photon_stats.csv  NebMLMCStreamKernel_pre_condadd_extraction.dot  NebMLMCStreamKernel_pre_dsp_extraction.dot  NebMLMCStreamKernel_schedule_report.csv  NebMLMCStreamKernel_scheduled_1.dot  NebMLMCStreamKernel_scheduled_2.dot  NebMLMCStreamKernel_scheduler_1_C.out  NebMLMCStreamKernel_scheduler_2_C.out  NebMLMCStreamKernel_tapnfold_1.dot  NebMLMCStreamKernel_tapnfold_2.dot  NebMLMCStreamKernel_validated_fifos.dot  NebMLMCStream_NebMLMCStreamKernel_final-simulation.pxg  NebMLMCStream_NebMLMCStreamKernel_original.pxg  StreamWrapperRegs.info
compiler/skeletons/fpga_mlmc/RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/src/nebmlmcstream/: NebMLMCStreamKernel.maxj  NebMLMCStreamManager.maxj
compiler/skeletons/openCL/: .Makefile.swp  Makefile  MonteCarlo.cpp  utils.h
compiler/skeletons/openCL_mlmc/: Makefile  MonteCarlo.cpp  MonteCarlo.h  Template.cl  a.out  find.cpp  generated.h  kernelRunner.cpp  kernelRunner.h  levelEstimator.cpp  main.cpp  utils.cpp
web/: bower.json  mean.json
web/config/: assets.json
web/config/env/: development.js  production.js  test.js
(+44 files in other folders)
