cmake_minimum_required(VERSION 3.3)
project(fpga_mlmc)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    CPUCode/NebMLMCStreamCpuCode.cpp
    RunRules/DFE/include/Maxfiles.h
    RunRules/Simulation/include/Maxfiles.h
    RunRules/Simulation/include/NebMLMCStream.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/tmp_resource_dump/NebMLMCStreamKernel.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/tmp_resource_dump/NebMLMCStreamKernel.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/tmp_resource_dump/NebMLMCStreamKernel_exec0.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/tmp_resource_dump/NebMLMCStreamKernel_Templates.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/AddressGenerator.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/AddressGeneratorStrings.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/AsyncHelpers.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/CapRegs.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/ChecksumMem.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Connections.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Data.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Debuggable.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/DebugStreams.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Demux.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/DualAspectMux.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/DualAspectReg.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/DynamicVarUInt.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Ethernet.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Fanout.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/FDStream.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Fifos.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/FilePullSource.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/FilePushSink.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWDouble_Specialization_decl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWDouble_Specialization_impl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWExceptionDispatch.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWFloat_decl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWFloat_impl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWOffsetFix_decl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWOffsetFix_impl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWRawBits_decl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWRawBits_impl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWSingle_Specialization_decl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWSingle_Specialization_impl.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/HWTypes.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/IFPGARegs.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/KernelManagerBlockSync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Loops.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/ManagerAsync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/ManagerBlock.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/ManagerInfrastructure.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/ManagerSync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MappedElements.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/max_msi.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/max_shared_fifo.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MaxFile.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MemoryControllerCommand.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MemoryControllerConfig.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MemoryControllerPro.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MemoryControllerRAM.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MemoryControllerStreams.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/MemoryControllerStrings.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Mux.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/NebMLMCStreamKernel.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/NebMLMCStreamKernel.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/NebMLMCStreamKernel_exec0.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/NebMLMCStreamKernel_Templates.cpp
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/PCIe.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/PullAsync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/PullPushAdapter.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/PullSync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/PushAsync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/PushSync.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/RunLengthExpander.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/SharedFIFO.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/SimException.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/SimTerminator.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/stdkernel_headers.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/stdsimheader.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/StreamStatus.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/StructToGroupDummy.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/TCP.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Timestamp.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/toe_internal_regs.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/varint_s.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/varint_u.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/software-sim/build/Watch.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/NebMLMCStream.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/NebMLMCStreamKernel_Assertions.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/NebMLMCStreamKernel_IODistances.h
    RunRules/Simulation/maxfiles/NebMLMCStream_VECTIS_DFE_SIM/scratch/NebMLMCStreamKernel_StreamOffsetEqs.h
    RunRules/Simulation/maxfiles/NebMLMCStream.h)

add_executable(fpga_mlmc ${SOURCE_FILES})